force-app/main/default/objects/GiftTransaction/fields/Anonymous_Donation__c.field-meta.xml
<CustomField>
    <fullName>Anonymous_Donation__c</fullName>
    <label>Anonymous Donation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>