force-app/main/default/objects/GiftTransaction/fields/CashAmount__c.field-meta.xml
<CustomField>
    <fullName>CashAmount__c</fullName>
    <label>Cash Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>