force-app/main/default/objects/GiftTransaction/fields/CashCount__c.field-meta.xml
<CustomField>
    <fullName>CashCount__c</fullName>
    <label>Cash Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>