force-app/main/default/objects/GiftTransaction/fields/CommitAmount__c.field-meta.xml
<CustomField>
    <fullName>CommitAmount__c</fullName>
    <label>Commit Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>