force-app/main/default/objects/GiftTransaction/fields/Craft_Commerce_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Craft_Commerce_Reference_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Craft Commerce Reference Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>