force-app/main/default/objects/GiftTransaction/fields/Donation_Type__c.field-meta.xml
<CustomField>
    <fullName>Donation_Type__c</fullName>
    <label>Donation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-time gift</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Major gift</fullName>
            </value>
            <value>
                <fullName>Matching gift</fullName>
            </value>
            <value>
                <fullName>Multi-year grant</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Grant</fullName>
            </value>
            <value>
                <fullName>Donation</fullName>
                <isActive>false</isActive>
                <label>Donation</label>
            </value>
            <value>
                <fullName>Pledge</fullName>
                <isActive>false</isActive>
                <label>Pledge</label>
            </value>
            <value>
                <fullName>Pledge Payment</fullName>
                <isActive>false</isActive>
                <label>Pledge Payment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>