force-app/main/default/objects/GiftTransaction/fields/DonationID__c.field-meta.xml
<CustomField>
    <fullName>DonationID__c</fullName>
    <label>Donation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>