force-app/main/default/objects/GiftTransaction/fields/DonationSolicitationMethod__c.field-meta.xml
<CustomField>
    <fullName>DonationSolicitationMethod__c</fullName>
    <label>Donation Solicitation Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>