force-app/main/default/objects/GiftTransaction/fields/DonationSolicitor__c.field-meta.xml
<CustomField>
    <fullName>DonationSolicitor__c</fullName>
    <label>Donation Solicitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>