force-app/main/default/objects/GiftTransaction/fields/Donor_Comment__c.field-meta.xml
<CustomField>
    <fullName>Donor_Comment__c</fullName>
    <label>Donor Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>