force-app/main/default/objects/GiftTransaction/fields/DonorCoveredFees__c.field-meta.xml
<CustomField>
    <fullName>DonorCoveredFees__c</fullName>
    <label>Donor Covered Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>