force-app/main/default/objects/GiftTransaction/fields/FirstDonationAmount__c.field-meta.xml
<CustomField>
    <fullName>FirstDonationAmount__c</fullName>
    <label>First Donation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>