force-app/main/default/objects/GiftTransaction/fields/FirstDonationDate__c.field-meta.xml
<CustomField>
    <fullName>FirstDonationDate__c</fullName>
    <label>First Donation Date</label>
    <type>Date</type>
</CustomField>