force-app/main/default/objects/GiftTransaction/fields/FundraiserComment__c.field-meta.xml
<CustomField>
    <fullName>FundraiserComment__c</fullName>
    <label>Fundraiser Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>