force-app/main/default/objects/GiftTransaction/fields/LastDonationAmount__c.field-meta.xml
<CustomField>
    <fullName>LastDonationAmount__c</fullName>
    <label>Last Donation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>