force-app/main/default/objects/GiftTransaction/fields/LastDonationDate__c.field-meta.xml
<CustomField>
    <fullName>LastDonationDate__c</fullName>
    <label>Last Donation Date</label>
    <type>Date</type>
</CustomField>