force-app/main/default/objects/GiftTransaction/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Gift Transactions</relationshipLabel>
    <relationshipName>Gift_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>