force-app/main/default/objects/GiftTransaction/fields/PaymentNote__c.field-meta.xml
<CustomField>
    <fullName>PaymentNote__c</fullName>
    <label>Payment Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>