force-app/main/default/objects/GiftTransaction/fields/PaymentReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentReceivedDate__c</fullName>
    <label>Payment Received Date</label>
    <type>Date</type>
</CustomField>