force-app/main/default/objects/GiftTransaction/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>