force-app/main/default/objects/GiftTransaction/fields/RecurringDonation__c.field-meta.xml
<CustomField>
    <fullName>RecurringDonation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring Donation</label>
    <type>Checkbox</type>
</CustomField>