force-app/main/default/objects/GiftTransaction/fields/Send_Acknowledgment_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Acknowledgment_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether an acknowledgment email should be sent for the Gift Transaction.</description>
    <inlineHelpText>Indicates whether an acknowledgment email should be sent for the Gift Transaction. Checked = Email Sent; Unchecked = Email Not Sent</inlineHelpText>
    <label>Send Acknowledgment Email</label>
    <type>Checkbox</type>
</CustomField>