force-app/main/default/objects/GiftTransaction/fields/ShoppingCartID__c.field-meta.xml
<CustomField>
    <fullName>ShoppingCartID__c</fullName>
    <label>Shopping Cart ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>