force-app/main/default/objects/GiftTransaction/fields/TenderCode__c.field-meta.xml
<CustomField>
    <fullName>TenderCode__c</fullName>
    <label>Tender Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>