force-app/main/default/objects/GiftTransaction/fields/TenderID__c.field-meta.xml
<CustomField>
    <fullName>TenderID__c</fullName>
    <label>Tender ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>