force-app/main/default/objects/GiftTransaction/fields/TotalCharge__c.field-meta.xml
<CustomField>
    <fullName>TotalCharge__c</fullName>
    <label>Total Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>